Basic HTTP authentication

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+HOTMAIL_USERNAME='your_username@example.com'
+HOTMAIL_PASSWORD='your_password'
+AUTH_USERNAME='your_username'
+AUTH_PASSWORD='your_password'
